@@ -1506,6 +1506,10 @@ make_texture_stage(const EggTexture *egg_tex) {
     stage->set_mode(TextureStage::M_selector);
     break;
 
+  case EggTexture::ET_normal_gloss:
+    stage->set_mode(TextureStage::M_normal_gloss);
+    break;
+
   case EggTexture::ET_unspecified:
     break;
   }
