@@ -766,6 +766,7 @@ make_texture_layer(const NodePath &render,
   case TextureStage::M_gloss:
   case TextureStage::M_height:
   case TextureStage::M_selector:
+  case TextureStage::M_normal_gloss:
     // Don't know what to do with these funny modes.  We should
     // probably raise an exception or something.  Fall through for
     // now.
